Bug 120234 - ImplGetSubChildWindow assert in launching color popup
Summary: ImplGetSubChildWindow assert in launching color popup
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
: 120198 (view as bug list)
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2018-10-01 10:24 UTC by Caolán McNamara
Modified: 2018-10-04 07:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2018-10-01 10:24:21 UTC
Description:
export SAL_USE_VCLPLUGIN=gtk
./instdir/program/soffice.bin --calc
format->cells
font effects, click on font color menu buton
assert in ImplGetSubChildWindow at assert(pParent == pParent->ImplGetWindow());

since...

commit 9ff4232c365c19c9402fce80e26ccbf739d0b82e
Author: Jan-Marek Glogowski <glogow@fbihome.de>
Date:   Wed Sep 26 14:09:59 2018 +0200

    Handle initial TabControl and border window


Actual Results:
crash

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Xisco Faulí 2018-10-01 16:48:25 UTC
*** Bug 120198 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2018-10-02 19:02:42 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=408dbdd28037917986f6d2cdc290f935ffefc60e

tdf#120234 ignore all proxy windows

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.