tdf#120234 ignore all proxy windows

I thought just border windows can act as proxies, but this bug
proves me wrong; also floating windows set mpClientWindow and may
have an additional nested proxy border window.
Interestingly proxies can have multiple children, which I tested
with a temporary assertion I added!?

So just ignore all proxy windows until we find a real one, And
drop the assertion as it doesn't make sense any more.

I'm just wondering why I always read Child instead of Client...

Change-Id: I83a1a5743b434399aae361cb14058993ba60c83c
Reviewed-on: https://gerrit.libreoffice.org/61196
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>